--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
     <script type="text/javascript" src="js/mdb.min.js"></script>
     <script type="text/javascript" src="js/navbar-fixed.js"></script>
     <!--Google Maps-->
-    <script src="https://maps.google.com/maps/api/js"></script>
+    <script src="https://maps.google.com/maps/api/js?key=AIzaSyBHLknR8sx981sZzSs0fEaWajiaWuHRDkw&callback=regular_map"></script>
     <!-- Google Maps settings -->
     <script>
         // Regular map
@@ -617,3 +617,4 @@
 </body>
 
 </html>
+AIzaSyBHLknR8sx981sZzSs0fEaWajiaWuHRDkw
